[package]
name = "passarg"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Implements OpenSSL-style password/passphrase argument handling."
repository = "https://github.com/astralblue/rust-passarg"

[dependencies]
thiserror = "1.0.2"
rpassword = "6.0.0"

[dev-dependencies]
clap = { version = "4.0.0", features = ["derive"] }
